--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,4 +1,4 @@
-2012-07-27  Albinus Michael  <michael.albinus@gmx.de>
+2012-07-27  Michael Albinus  <michael.albinus@gmx.de>
 
 	* dbusbind.c (XD_DBUS_VALIDATE_BUS_ADDRESS): Canonicalize session
 	bus address.
