--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,4 +1,4 @@
-2012-07-27  Albinus Michael  <michael.albinus@gmx.de>
+2012-07-27  Michael Albinus  <michael.albinus@gmx.de>
 
 	* notifications.el (notifications-on-action-signal)
 	(notifications-on-closed-signal): Use also the bus address for the map.
