--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-28  Eli Zaretskii  <eliz@gnu.org>
+
+	* xdisp.c (init_iterator): Don't reference tip_frame in a build
+	--without-x.  (Bug#11742)
+
 2012-07-27  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Adjust GDB to reflect pvec_type changes (Bug#12036).
