--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-28  Chong Yidong  <cyd@gnu.org>
+
+	* progmodes/gdb-mi.el (gdb-place-breakpoints): Fix the call to
+	gdb-get-location.
+
 2012-07-25  Leo Liu  <sdl.web@gmail.com>
 
 	* progmodes/cc-menus.el (cc-imenu-objc-function): Avoid leaving nil in
