--- a/etc/NEWS
+++ b/etc/NEWS
@@ -147,8 +147,8 @@ for it.
 
 * Editing Changes in Emacs 24.2
 
-** New option `delete-trailing-lines' specifies whether the
-M-x delete-trailing-lines command should delete trailing lines at the
+** New option `delete-trailing-lines' specifies whether the M-x
+delete-trailing-whitespace command should delete trailing lines at the
 end of the buffer.  It defaults to t.
 
 ** Search changes
