--- a/etc/NEWS
+++ b/etc/NEWS
@@ -360,6 +360,12 @@ channel keys found, if any.
 if the command ends in `;' (when operating on multiple files).
 Otherwise, it executes the command on each file in parallel.
 
+** Shell
+
+*** New option `async-shell-command-buffer' specifies what buffer to use
+for a new asynchronous shell command when the default output buffer
+`*Async Shell Command*' is already taken by another running command.
+
 ** FFAP
 
 *** The option `ffap-url-unwrap-remote' can now be a list of strings,
