--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-29  Juri Linkov  <juri@jurta.org>
+
+	* automated/occur-tests.el (occur-test-case): Use predefined
+	buffer name " *test-occur*" instead of a random buffer name.
+
 2012-07-20  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* automated/ruby-mode-tests.el: New file with one test.
