--- a/leim/ChangeLog
+++ b/leim/ChangeLog
@@ -1,3 +1,11 @@
+2012-07-29  Paul Eggert  <eggert@cs.ucla.edu>
+
+	deactive->inactive, inactivate->deactivate spelling fixes (Bug#10150)
+	* quail/uni-input.el (ucs-input-deactivate):
+	Rename from ucs-input-inactivate.
+	* quail/hangul.el (hangul-input-method-deactivate):
+	Rename from hangul-input-method-inactivate.
+
 2012-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* quail/ipa.el: Use cl-lib.
