--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -4719,7 +4719,7 @@
 2007-11-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Overview): Mention also the PuTTY integration under
-	Win32.  Remove paragraphs about Tramp's experimental status.
+	w32.  Remove paragraphs about Tramp's experimental status.
 	(Frequently Asked Questions): Add code example for highlighting the
 	mode line.
 
