* alloc.c (Fgarbage_collect): Indent as per usual Emacs style.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-29  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* alloc.c (Fgarbage_collect): Indent as per usual Emacs style.
+
 2012-07-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* makefile.w32-in (LISP_H): Add $(NT_INC)/stdalign.h.
