--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-07-29  Eli Zaretskii  <eliz@gnu.org>
+
+	* international/mule-cmds.el (set-locale-environment): Revert last
+	change, since display-graphic-p returns nil when this function is
+	called during startup.  Instead...
+
+	* term/w32console.el (terminal-init-w32console): ...setup the
+	keyboard and terminal encoding for TTY sessions here.  (Bug#12082)
+
 2012-07-29  Juri Linkov  <juri@jurta.org>
 
 	* simple.el (goto-line): Don't display default line number in the
