--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-07-29  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc.el (math-normalize-error): New variable.
+	(math-normalize): Set `math-normalize-error' to t
+	when there's an error.
+
+	* calc/calc-alg.el (math-simplify): Don't simplify when
+	`math-normalize' returns an error.
+
 2012-07-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* international/mule-cmds.el (set-locale-environment): Revert last
