Remove some empty src/s files.
* configure.ac (opsysfile): Set to empty on freebsd, gnu-linux,
gnu-kfreebsd; and to usg5-4-common.h on sol2*, unixware.

* src/s/freebsd.h, src/s/gnu-linux.h, src/s/sol2-6.h, src/s/unixware.h:
Remove empty files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-30  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (opsysfile): Set to empty on freebsd, gnu-linux,
+	gnu-kfreebsd; and to usg5-4-common.h on sol2*, unixware.
+
 2012-07-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Merge from gnulib, incorporating:
