--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-30  Glenn Morris  <rgm@gnu.org>
+
+	* s/freebsd.h, s/gnu-linux.h, s/sol2-6.h, s/unixware.h:
+	Remove empty files.
+
 2012-07-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Export to GDB most of lisp.h's remaining object-like macros.
