--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@
 
 	* configure.ac (opsysfile): Tweak message for null case.
 
-	* configure.ac (opsysfile): Set to empty on freebsd, gnu-linux,
-	gnu-kfreebsd; and to usg5-4-common.h on sol2*, unixware.
+	* configure.ac (opsysfile): Set to empty on aix4-2, freebsd,
+	gnu-linux, gnu-kfreebsd; and to usg5-4-common.h on sol2*, unixware.
 
 2012-07-30  Paul Eggert  <eggert@cs.ucla.edu>
 
