--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,7 +1,7 @@
 2012-07-30  Glenn Morris  <rgm@gnu.org>
 
 	* s/aix4-2.h (sigmask): No need to undefine it, since syssignal.h
-	does that unconditionally.
+	does that unconditionally.  Remove file, which is now empty.
 
 	* s/freebsd.h, s/gnu-linux.h, s/sol2-6.h, s/unixware.h:
 	Remove empty files.
