Move _longjmp, _setjmp from src/s to configure
* configure.ac (_longjmp, _setjmp): Move here from src/s.

* src/s/usg5-4-common.h (_longjmp, _setjmp): Let configure set them.
* src/s/irix6-5.h (_longjmp, _setjmp): No more need to undefine.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-30  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (_longjmp, _setjmp): Move here from src/s.
+
 2012-07-30  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* Makefile.in (install-arch-indep): Remove sh -x.
