Empty src/s/netbsd.h and remove the file
* configure.ac (SIGNAL_H_AHB): New hack macro.
(opsysfile): Set to empty on netbsd, openbsd.
(AH_BOTTOM): Include signal.h if SIGNAL_H_AHB is defined.

* src/s/netbsd.h: Let configure include signal.h if needed.
Remove file, which is now empty.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2012-07-30  Glenn Morris  <rgm@gnu.org>
 
+	* s/netbsd.h: Let configure include signal.h if needed.
+	Remove file, which is now empty.
+
 	* s/usg5-4-common.h (_longjmp, _setjmp): Let configure set them.
 	* s/irix6-5.h (_longjmp, _setjmp): No more need to undefine.
 
