--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-07-30  Glenn Morris  <rgm@gnu.org>
 
+	* configure.ac (SIGNAL_H_AHB): New hack macro.
+	(opsysfile): Set to empty on netbsd, openbsd.
+	(AH_BOTTOM): Include signal.h if SIGNAL_H_AHB is defined.
+
 	* configure.ac (_longjmp, _setjmp): Move here from src/s.
 
 2012-07-30  Jan Djärv  <jan.h.d@swipnet.se>
