Move TIOCSIGSEND from src/s to configure
* configure.ac (TIOCSIGSEND): Move here from src/s.

* src/s/usg5-4-common.h (TIOCSIGSEND): Let configure set it.
* src/s/irix6-5.h (TIOCSIGSEND): No more need to undefine.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
 	(opsysfile): Set to empty on netbsd, openbsd.
 	(AH_BOTTOM): Include signal.h if SIGNAL_H_AHB is defined.
 
-	* configure.ac (_longjmp, _setjmp): Move here from src/s.
+	* configure.ac (_longjmp, _setjmp, TIOCSIGSEND): Move here from src/s.
 
 2012-07-30  Jan Djärv  <jan.h.d@swipnet.se>
 
