--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -3,8 +3,10 @@
 	* s/netbsd.h: Let configure include signal.h if needed.
 	Remove file, which is now empty.
 
-	* s/usg5-4-common.h (_longjmp, _setjmp): Let configure set them.
-	* s/irix6-5.h (_longjmp, _setjmp): No more need to undefine.
+	* s/usg5-4-common.h (_longjmp, _setjmp, TIOCSIGSEND):
+	Let configure set them.
+	* s/irix6-5.h (_longjmp, _setjmp, TIOCSIGSEND):
+	No more need to undefine.
 
 2012-07-30  Andreas Schwab  <schwab@linux-m68k.org>
 
